--- a/后台开发核心技术与应用实践.md
+++ b/后台开发核心技术与应用实践.md
@@ -431,3 +431,342 @@ top能实时显示各个进程的资源占用状况
 
 ps命令列出的是当前在运行的进程的快照，如果想动态显示进程信息，要用top命令
 
+|                       Linux进程状态                        | ps对应状态码 |
+| :--------------------------------------------------------: | :----------: |
+|              运行(正在运行或在运行队列中等待)              |      R       |
+|    中断(休眠中，受阻，在等待某个条件的形成或接收到信号)    |      S       |
+| 不可中断(收到信号不唤醒和不可运行，进程必须等待有中断发生) |      D       |
+|            僵死(进程已终止，但进程描述符仍存在)            |      Z       |
+|  停止(进程收到SIGSTOP，SIGSTP ,SIGTIN, SIGTOU信号后终止)   |      T       |
+
+|   参数    |             功能             |
+| :-------: | :--------------------------: |
+|     a     |         显示所有进程         |
+|    -a     |    显示同一终端下所有程序    |
+|    -A     |         显示所有进程         |
+|     c     |       显示进程真实名称       |
+|    -e     |           等于 -A            |
+|     e     |         显示环境变量         |
+|     f     |       显示程序之间关系       |
+|    -H     |         显示树状结构         |
+|     r     |      显示当前终端的进程      |
+|     T     |    显示当前终端的所有程序    |
+|     u     |      指定用户的所有进程      |
+|    -au    |       显示较详细的资讯       |
+|   -aux    | 显示所有包含其他使用者的行程 |
+|    -C     |      列出指定命令的状况      |
+|  --help   |         显示帮助信息         |
+| --version |           显示版本           |
+
+- 显示指定用户信息 `ps -u 用户名`
+- 显示所有进程信息，包括命令行`ps -ef`
+- ps与grep组合，查找特定进程,例如寻找test   `ps -ef|grep test`
+- 将目前登入的PID与相关信息显示`ps -l`
+- 列出目前所有在内存中的程序 `ps aux`
+
+
+
+### Valgrind
+
+Valgrind 是内存分析工具
+
+![](./图片/Valgrind.png)
+
+1. Memcheck ,内存检查器
+2. Callgrind，在程序运行时收集数据
+3. Cachegrind，检查程序中缓存使用出现的问题，cache分析器
+4. Helgrind，检查多线程程序中出现的竞争问题
+5. Massif ，堆栈分析器
+6. Extension，利用core通过的功能，自己编写独特内存调试工具
+
+![](./图片/内存布局.png)
+
+`test.cpp`
+
+```c++
+#include<iostream>
+#include<stdlib.h>
+using namespace std;
+void func()
+{
+    int *x=new int[10];
+    x[10]=0;
+}
+int main()
+{
+    func();
+    cout<<"done"<<endl;
+    return 0;
+}
+
+```
+
+`valgrind --tool=memcheck ./test`
+
+![](./图片/memcheck.png)
+
+- 上图这是对内存的非法写操作，非法写操作的内存是4Byte
+- 发送错误时的函数堆栈，具体是源代码是第7行
+
+![](./图片/memcheck2.png)
+
+- 上图说明该程序泄漏了40Byte的内存空间，没有释放动态内存
+
+**常见内存出错情况**
+
+1. 使用未初始化的内存
+
+   `test.cpp`
+
+   ```c++
+   #include<iostream>
+   using namespace std;
+   int main(){
+       int a[5];
+       int i,s=0;
+       a[0]=a[1]=a[3]=a[4]=0;
+       for(int i=0;i<5;i++)
+           s=s+a[i];
+       if(s==33)
+           cout<<"is 33"<<endl;
+       else
+           cout<<"not is 33"<<endl;
+       return 0;
+   }
+   
+   ```
+
+   ![](./图片/valgrind1.png)
+
+   **程序第9行，程序跳转依赖于未初始化变量**
+
+2. 内存读写越界
+
+   ```c++
+   #include<iostream>
+   #include<stdlib.h>
+   using namespace std;
+   int main(){
+       int len=4;
+       int *pt=new int[len];
+       int *p=pt;
+       for(int i=0;i<len;i++)
+           p++;
+       *p=5;
+       cout<<*p<<endl;
+       return 0;
+   }
+   
+   ```
+
+   ![](./图片/valgrind2.1.png)
+
+   ![](./图片/valgrind2.2.png)
+
+   **第10行非法读，第11行非法写，16bytes泄漏内存**
+
+3. 内存覆盖
+
+   ```c++
+   #include<stdio.h>
+   #include<string.h>
+   #include<stdlib.h>
+   using namespace std;
+   int main(){
+       char x[50];
+       int i;
+       for(int i=0;i<50;i++)
+           x[i]=i+1;
+       strncpy(x+20,x,20);// 20-39  0-19
+       strncpy(x+20,x,21);// 20-40  0-20
+       strncpy(x,x+20,20);
+       strncpy(x,x+20,21);
+       x[39]='\0';
+       strcpy(x,x+20); //  0-19     20-39
+       x[39]=39;
+       x[40]='\0';
+       strcpy(x,x+20);//  0-20  20-40
+       return 0;
+   }
+   ```
+
+   ![](./图片/valgrind3.png)
+
+   **11,13,18发送内存泄漏**
+
+   [关于strncpy这个函数](<https://blog.csdn.net/sinat_30071459/article/details/72771137>)
+
+4. 动态内存管理错误
+
+   ```c++
+   #include<iostream>
+   #include<stdlib.h>
+   using namespace std;
+   int main(){
+     int i;
+     char *p=(char *)malloc(10);
+     char *pt=p;
+     for(int i=0;i<10;i++)
+     {
+         p[i]='z';
+     }
+     delete p;
+     pt[1]='x';
+     free(pt);
+     return 0;
+   }
+   
+   ```
+
+   ![](./图片/valgrind4.1.png)
+
+   ![](./图片/valgrind4.2.png)
+
+   **第12行 分配和释放函数不一致，第13行非法写操作，第14行释放内存函数无效**
+
+5. 内存泄漏
+
+   `tree.h`
+
+   ```c++
+   #ifndef _TREE_
+   #define _TREE_
+   typedef struct _node{
+       struct _node *l;
+       struct _node *r;
+       char v;
+   }node;
+   node *mk(node *l,node *r,char val);
+   void nodefr(node *n);
+   #endif // _TREE_
+   
+   ```
+
+   `tree.cpp`
+
+   ```c++
+   #include<stdlib.h>
+   #include "tree.h"
+   node *mk(node *l,node *r,char val)
+   {
+       node *f=(node *)malloc(sizeof(*f));
+       f->l=l;
+       f->r=r;
+       f->v=val;
+       return f;
+   }
+   void nodefr(node *n)
+   {
+       if(n)
+       {
+           nodefr(n->l);
+           nodefr(n->r);
+           free(n);
+       }
+   }
+   ```
+
+   `test.cpp`
+
+   ```c++
+   #include <iostream>
+   #include "tree.h"
+   int main()
+   {
+       node *tree1,*tree2,*tree3;
+       tree1=mk(mk(mk(0,0,'3'),0,'2'),0,'1');
+       tree2=mk(0,mk(0,mk(0,0,'6'),'5'),'4');
+       tree3=mk(mk(tree1,tree2,'8'),0,'7');
+       return 0;
+   }
+   
+   ```
+
+   `makefile`
+
+   ```c++
+   test: test.o tree.o
+   	g++ -g -o test test.o tree.o
+   tree.o: tree.cpp tree.h
+   	g++ -g -c tree.cpp -o tree.o
+   test.o: test.cpp
+   	g++ -g -c test.cpp -o test.o
+   
+   ```
+
+   ![](./图片/valgrind5程序.png)
+
+   ![](./图片/valgrind5.png)
+
+   ​	**因为linux系统指针是8字节，那么因为内存对齐的关系，每个节点大小为24字节，这样正好泄漏192字节内存**	根节点是直接泄漏，没有任何指针指向根节点，其他节点是间接泄漏，指向该内存的指针处于内存泄漏状态
+
+   通过`helgrind`查看死锁
+
+   `test.cpp`
+
+   ```c++
+   #include <pthread.h>
+    
+    
+    
+   pthread_mutex_t s_mutex_a;
+   pthread_mutex_t s_mutex_b;
+   pthread_barrier_t s_barrier;
+    
+   void lock() {
+       pthread_mutex_lock(&s_mutex_b);
+       {
+           pthread_barrier_wait(&s_barrier);
+    
+           pthread_mutex_lock(&s_mutex_a);
+           pthread_mutex_unlock(&s_mutex_a);
+       }
+       pthread_mutex_unlock(&s_mutex_b);
+   }
+    
+   static void* thread_routine(void* arg) {
+       pthread_mutex_lock(&s_mutex_a);
+       {
+           pthread_barrier_wait(&s_barrier);
+    
+           pthread_mutex_lock(&s_mutex_b);
+           pthread_mutex_unlock(&s_mutex_b);
+       }
+       pthread_mutex_unlock(&s_mutex_a);
+   }
+    
+   int main(int argc, char** argv) {
+       pthread_t tid;
+    
+       pthread_mutex_init(s_mutex_a, 0);
+       pthread_mutex_init(&s_mutex_b, 0);
+       pthread_barrier_init(&s_barrier, 0, 2);
+    
+       pthread_create(&tid, 0, &thread_routine, 0);
+    
+       lock();
+    
+       pthread_join(tid, 0);
+       pthread_cancel(tid);
+    
+       pthread_barrier_destroy(&s_barrier);
+       pthread_mutex_destroy(&s_mutex_a);
+       pthread_mutex_destroy(&s_mutex_b);
+    
+       return 0;
+   }
+   ```
+
+   先编译`g++ -g -o test test.cpp -lpthread`
+
+   `valgrind --tool=helgrind ./test`
+
+    helgrind执行时，如果发生死锁，需要ctrl+C来终止运行，于是可以得到如下结果
+
+   ![](./图片/helgrind1.png)
+
+   ![](./图片/helgrind2.png)
+
+   ![](./图片/helgrind3.png)
+
+   
