--- a/sql数据库/leetcode题/上升的温度.md
+++ b/sql数据库/leetcode题/上升的温度.md
@@ -22,3 +22,17 @@
 +----+
 ```
 
+```sql
+SELECT w1.Id
+FROM Weather w1,Weather w2
+WHERE AddDate(w2.RecordDate,interval 1 day)=w1.RecordDate
+AND w1.Temperature>w2.Temperature
+```
+
+```sql
+select w1.Id 
+from Weather w1,Weather w2 
+where w1.Temperature > w2.Temperature 
+and TO_DAYS(w1.RecordDate) - TO_DAYS(w2.RecordDate) = 1;
+```
+
