--- a/操作系统/命令行.md
+++ b/操作系统/命令行.md
@@ -75,6 +75,7 @@ grep命令
 －s：不显示不存在或无匹配文本的错误信息。
 －v：显示不包含匹配文本的所有行。
  -R: 在多级目录中对文本递归搜索
+ -E： 解释PATTERN作为扩展正则表达式，也就相当于使用egrep
 
 pattern正则表达式主要参数：
 \： 忽略正则表达式中特殊字符的原有含义。
@@ -326,6 +327,29 @@ bb
 bbb	
 ```
 
+`join` ， 对比数据
+
+| `-d` | 指定合并的分隔符，默认为Tab  |
+| ---- | ---------------------------- |
+| `-s` | 不合并到一行，每个文件为一行 |
+
+```
+$ echo hello > file1
+$ echo shiyanlou > file2
+$ echo www.shiyanlou.com > file3
+$ paste -d ':' file1 file2 file3
+
+hello:shiyanlou:www.shiyanlou.com
+
+$ paste -s file1 file2 file3
+
+hello
+shiyanlou
+www.shiyanlou.com
+```
+
+
+
 ### 3.5. wc 统计行和字符的工具
 
 ```
@@ -482,6 +506,37 @@ tar -cvf etc.tar /etc <==仅打包，不压缩！
 - -c :打包选项
 - -v :显示打包进度
 - -f :使用档案文件
+- 你也可以使用 `-P` 保留绝对路径符。
+
+```
+zip -r -q -o shiyanlou.zip /home/shiyanlou/Desktop
+-r 参数表示递归打包包含子目录的全部内容，-q 参数表示为安静模式，即不向屏幕输出信息，-o，表示输出文件  
+
+$ zip -r -9 -q -o shiyanlou_9.zip /home/shiyanlou/Desktop -x ~/*.zip
+-x 排除某些文件
+
+使用 -e 参数可以创建加密压缩包：
+$ zip -r -e -o shiyanlou_encryption.zip /home/shiyanlou/Desktop
+
+需要加上 -l 参数将 LF 转换为 CR+LF 来达到以上目的，与windows兼容
+$ zip -r -l -o shiyanlou.zip /home/shiyanlou/Desktop
+```
+
+
+
+
+
+- 我们只需要在创建 tar 文件的基础上添加 `-z` 参数，使用 `gzip` 来压缩文件：
+
+```
+$ tar -czf shiyanlou.tar.gz /home/shiyanlou/Desktop
+```
+
+- 解压 `*.tar.gz` 文件：
+
+```
+$ tar -xzf shiyanlou.tar.gz
+```
 
 **压缩**
 
@@ -508,8 +563,30 @@ tar解压参数说明：
 - -z 解压gz文件
 - -j 解压bz2文件
 - -J 解压xz文件
+- 指定路径：-C 参数
+- 只查看不解包文件 `-t` 参数：
 
 `dpkg -i `安装deb包
+
+`zip`
+
+使用安静模式，将文件解压到指定目录：
+
+```
+$ unzip -q shiyanlou.zip -d ziptest
+```
+
+上述指定目录不存在，将会自动创建。如果你不想解压只想查看压缩包的内容你可以使用 `-l` 参数：
+
+```
+$ unzip -l shiyanlou.zip
+```
+
+使用 `-O`（英文字母，大写 o）参数指定编码类型：
+
+```
+unzip -O GBK 中文压缩文件.zip
+```
 
 ## 5. 进程管理
 
@@ -856,3 +933,274 @@ yyy@yyw:~/test$ date +%Y-%m-%d.%H--%M--%S
 - `ssh -A  yyy@118.24.197.134` 连接服务器
 
 要使用`sudo`必须满足两个条件 1. 知道当前登陆用户密码 2. 当前用户在sudo用户组
+
+这里介绍两个重要文件 `/etc/bashrc`（有的 Linux 没有这个文件） 和 `/etc/profile` ，它们分别存放的是 shell 变量和环境变量。还有要注意区别的是每个用户目录下的一个隐藏文件： `.profile `只对当前用户永久生效。而写在 `/etc/profile` 里面的是对所有用户永久生效，所以如果想要添加一个永久生效的环境变量，只需要打开 `/etc/profile`，在最后加上你想添加的环境变量就好啦。
+
+
+
+
+
+在每个用户的 home 目录中有一个 Shell 每次启动时会默认执行一个配置脚本，以初始化环境，包括添加一些用户自定义环境变量等等。zsh 的配置文件是 `.zshrc`，相应 Bash 的配置文件为 `.bashrc`。它们在 `etc` 下还都有一个或多个全局的配置文件，不过我们一般只修改用户目录下的配置文件。
+
+
+
+前面我们在 Shell 中修改了一个配置脚本文件之后（比如 zsh 的配置文件 home 目录下的 `.zshrc`），每次都要退出终端重新打开甚至重启主机之后其才能生效，很是麻烦，我们可以使用 `source` 命令来让其立即生效，如：
+
+```
+$ cd /home/shiyanlou
+$ source .zshrc
+```
+
+`source` 命令还有一个别名就是 `.`，上面的命令如果替换成 `.` 的方式就该是：
+
+```
+$ . ./.zshrc
+```
+
+在使用`.`的时候，需要注意与表示当前路径的那个点区分开。
+
+我们可以简单地使用下面命令直接添加内容到 `.zshrc` 中：
+
+```
+$ echo "PATH=$PATH:/home/shiyanlou/mybin" >> .zshrc
+```
+
+### crontab
+
+crontab` 命令常见于 Unix 和类 Unix 的操作系统之中（Linux 就属于类 Unix 操作系统），用于设置周期性被执行的指令。
+
+- crontab 环境准备
+
+  ```
+  首先我们会启动 rsyslog，以便我们可以通过日志中的信息来了解我们的任务是否真正的被执行了
+  sudo apt-get install -y rsyslog
+  sudo service rsyslog start
+  在本实验环境中 crontab 也是不被默认启动的，同时不能在后台由 upstart 来管理，所以需要我们来启动它:
+  sudo cron －f &
+  ```
+
+- crontab的使用
+
+  `crontab -e `添加任务计划
+
+  ```
+  在文档的最后一排加上这样一排命令,该任务是每分钟我们会在/home/shiyanlou目录下创建一个以当前的年月日时分秒为名字的空白文件
+  */1 * * * * touch /home/shiyanlou/$(date +\%Y\%m\%d\%H\%M\%S)
+  
+   “ % ” 在 crontab 文件中，有结束命令行、换行、重定向的作用，前面加 ” \ ” 符号转义，否则，“ % ” 符号将执行其结束命令行或者换行的作用，并且其后的内容会被做为标准输入发送给前面的命令。
+  ```
+
+  `crontab -l ` 查看我们添加了哪些任务
+
+  ```
+  可以通过以下2种方式来确定我们的 cron 是否成功的在后台启动
+  
+  ps aux | grep cron
+  
+  or
+  
+  pgrep cron
+  ```
+
+  
+
+  `sudo tail -f /var/log/syslog`  我们通过这样一个命令可以查看到执行任务命令之后在日志中的信息反馈
+
+  `crontab -r` 删除任务
+
+  
+
+  
+
+   每个用户使用 `crontab -e` 添加计划任务，都会在 `/var/spool/cron/crontabs` 中添加一个该用户自己的任务文档，这样目的是为了隔离。
+
+  
+
+  如果是系统级别的定时任务，应该如何处理？只需要以 sudo 权限编辑 `/etc/crontab` 文件就可以。
+
+  cron 服务监测时间最小单位是分钟，所以 cron 会每分钟去读取一次` /etc/crontab `与 `/var/spool/cron/crontabs` 里面的內容。
+
+```
+/etc/cron.daily，目录下的脚本会每天执行一次，在每天的6点25分时运行；
+/etc/cron.hourly，目录下的脚本会每个小时执行一次，在每小时的17分钟时运行；
+/etc/cron.monthly，目录下的脚本会每月执行一次，在每月1号的6点52分时运行；
+/etc/cron.weekly，目录下的脚本会每周执行一次，在每周第七天的6点47分时运行；
+```
+
+
+
+### 备份日志
+
+```
+小明是一个服务器管理员，他需要每天备份论坛数据（这里我们用 alternatives.log 日志替代），备份当天的日志并删除之前的日志。而且备份之后文件名是 年-月-日 的格式。alternatives.log 在 /var/log/ 下面。
+
+目标
+为 shiyanlou 用户添加计划任务
+每天凌晨 3 点的时候定时备份 alternatives.log 到 /home/shiyanlou/tmp/ 目录
+命名格式为 年-月-日，比如今天是2017年4月1日，那么文件名为 2017-04-01
+
+
+udo cron -f &
+crontab -e 添加
+0 3 * * * sudo rm /home/shiyanlou/tmp/*
+0 3 * * * sudo cp /var/log/alternatives.log /home/shiyanlou/tmp/$(date +\%Y-\%m-\%d)
+```
+
+![img](https://images2015.cnblogs.com/blog/513841/201608/513841-20160812102124078-171184924.png)
+
+在以上各个字段中，还可以使用以下特殊字符：
+
+星号（*）：代表所有可能的值，例如month字段如果是星号，则表示在满足其它字段的制约条件后每月都执行该命令操作。
+
+逗号（,）：可以用逗号隔开的值指定一个列表范围，例如，“1,2,5,7,8,9”
+
+中杠（-）：可以用整数之间的中杠表示一个整数范围，例如“2-6”表示“2,3,4,5,6”
+
+正斜线（/）：可以用正斜线指定时间的间隔频率，例如“0-23/2”表示每两小时执行一次。同时正斜线可以和星号一起使用，例如*/10，如果用在minute字段，表示每十分钟执行一次。
+
+
+
+### exec
+
+使用`exec`命令实现“永久”重定向。`exec`命令的作用是使用指定的命令替换当前的 Shell，即使用一个进程替换当前进程，或者指定新的重定向
+
+```
+# 先开启一个子 Shell
+$ zsh
+# 使用exec替换当前进程的重定向，将标准输出重定向到一个文件
+$ exec 1>somefile
+# 后面你执行的命令的输出都将被重定向到文件中,直到你退出当前子shell，或取消exec的重定向（后面将告诉你怎么做）
+$ ls
+$ exit
+$ cat somefile
+
+
+
+```
+
+![](https://doc.shiyanlou.com/document-uid600404labid6127timestamp1523952144929.png/wm)
+
+你可以使用下面命令查看当前 Shell 进程中打开的文件描述符：
+
+` cd /dev/fd/;ls -Al`
+
+同样使用`exec`命令可以创建新的文件描述符：
+
+```
+$ zsh
+$ exec 3>somefile
+# 先进入目录，再查看，否则你可能不能得到正确的结果，然后再回到上一次的目录
+$ cd /dev/fd/;ls -Al;cd -
+# 注意下面的命令>与&之间不应该有空格，如果有空格则会出错
+$ echo "this is test" >&3
+$ cat somefile
+$ exit
+```
+
+![](https://doc.shiyanlou.com/document-uid735639labid346timestamp1532415336263.png/wm)
+
+关闭文件描述符 `exec 3>&-`
+
+
+
+我们可以利用设个`/dev/null`屏蔽命令的输出：
+
+```
+$ cat Documents/test.c nefile 1>/dev/null 2>&1
+```
+
+上面这样的操作将使你得不到任何输出结果。
+
+```
+挑战：历史命令
+介绍
+在 Linux 中，对于文本的处理和分析是极为重要的，现在有一个文件叫做 data1，可以使用下面的命令下载：
+
+$ cd /home/shiyanlou
+$ wget http://labfile.oss.aliyuncs.com/courses/1/data1
+data1 文件里记录是一些命令的操作记录，现在需要你从里面找出出现频率次数前3的命令并保存在 /home/shiyanlou/result。
+
+目标
+处理文本文件 /home/shiyanlou/data1
+将结果写入 /home/shiyanlou/result
+结果包含三行内容，每行内容都是出现的次数和命令名称，如“100 ls”
+
+提示
+cut 截取 (参数可以使用 -c 8-，使用 man cut 可以查看含义)
+uniq -dc 去重
+sort 的参数选择 -k1 -n -r
+操作过程使用管道，例如：
+$ cd /home/shiyanlou
+$ cat data1 |....|....|....   >  /home/shiyanlou
+
+
+
+
+cat data1 |cut -c 8-|sort|uniq -dc|sort -rn -k1 |head -3 > /home/shiyanlou/result
+
+cut -c 8- 以行为单位， 从每行的第8个开始
+uniq -dc  -c 显示行出现的次数  -d  只显示出现过两次及以上的行
+sort -rn -k1   -n 按数字排序，  -r 倒序  -k按指定列排序
+head -3 显示前3行
+```
+
+### 正则表达式
+
+一个正则表达式通常被称为一个模式（**pattern**），为用来描述或者匹配一系列符合某个句法规则的字符串。
+
+#### 选择
+
+`|`竖直分隔符表示选择，例如"boy|girl"可以匹配"boy"或者"girl"
+
+#### 数量限定
+
+数量限定除了我们举例用的`*`,还有`+`加号,`?`问号,如果在一个模式中不加数量限定符则表示出现一次且仅出现一次：
+
+- `+`表示前面的字符必须出现至少一次(1次或多次)，例如，"goo+gle",可以匹配"gooogle","goooogle"等；
+- `?`表示前面的字符最多出现一次(0次或1次)，例如，"colou?r",可以匹配"color"或者"colour";
+- `*`星号代表前面的字符可以不出现，也可以出现一次或者多次（0次、或1次、或多次），例如，“0*42”可以匹配42、042、0042、00042等。
+
+#### 范围和优先级
+
+`()`圆括号可以用来定义模式字符串的范围和优先级，这可以简单的理解为是否将括号内的模式串作为一个整体。例如，"gr(a|e)y"等价于"gray|grey"，（这里体现了优先级，竖直分隔符用于选择a或者e而不是gra和ey），"(grand)?father"匹配father和grandfather（这里体验了范围，`?`将圆括号内容作为一个整体匹配）。
+
+#### 语法（部分）
+
+正则表达式有多种不同的风格，下面列举一些常用的作为 PCRE 子集的适用于`perl`和`python`编程语言及`grep`或`egrep`的正则表达式匹配规则：(**由于markdown表格解析的问题，下面的竖直分隔符用全角字符代替，实际使用时请换回半角字符**)
+
+> PCRE（Perl Compatible Regular Expressions中文含义：perl语言兼容正则表达式）是一个用 C 语言编写的正则表达式函数库，由菲利普.海泽(Philip Hazel)编写。PCRE是一个轻量级的函数库，比Boost 之类的正则表达式库小得多。PCRE 十分易用，同时功能也很强大，性能超过了 POSIX 正则表达式库和一些经典的正则表达式库。
+
+| 字符      | 描述                                                         |
+| --------- | ------------------------------------------------------------ |
+| \         | **将下一个字符标记为一个特殊字符、或一个原义字符。**例如，“n”匹配字符“n”。“\n”匹配一个换行符。序列“\\”匹配“\”而“\(”则匹配“(”。 |
+| ^         | **匹配输入字符串的开始位置。**                               |
+| $         | **匹配输入字符串的结束位置。**                               |
+| {n}       | n是一个非负整数。**匹配确定的n次**。例如，“o{2}”不能匹配“Bob”中的“o”，但是能匹配“food”中的两个o。 |
+| {n,}      | n是一个非负整数。**至少匹配n次**。例如，“o{2,}”不能匹配“Bob”中的“o”，但能匹配“foooood”中的所有o。“o{1,}”等价于“o+”。“o{0,}”则等价于“o*”。 |
+| {n,m}     | m和n均为非负整数，其中n<=m。**最少匹配n次且最多匹配m次。**例如，“o{1,3}”将匹配“fooooood”中的前三个o。“o{0,1}”等价于“o?”。请注意在逗号和两个数之间不能有空格。 |
+| *         | **匹配前面的子表达式零次或多次**。例如，zo*能匹配“z”、“zo”以及“zoo”。*等价于{0,}。 |
+| +         | **匹配前面的子表达式一次或多次**。例如，“zo+”能匹配“zo”以及“zoo”，但不能匹配“z”。+等价于{1,}。 |
+| ?         | **匹配前面的子表达式零次或一次**。例如，“do(es)?”可以匹配“do”或“does”中的“do”。?等价于{0,1}。 |
+| ?         | 当该字符紧跟在任何一个其他限制符（*,+,?，{n}，{n,}，{n,m}）后面时，匹配模式是非贪婪的。非贪婪模式尽可能少的匹配所搜索的字符串，而默认的贪婪模式则尽可能多的匹配所搜索的字符串。例如，对于字符串“oooo”，“o+?”将匹配单个“o”，而“o+”将匹配所有“o”。 |
+| .         | **匹配除“\n”之外的任何单个字符**。要匹配包括“\n”在内的任何字符，请使用像“(.｜\n)”的模式。 |
+| (pattern) | **匹配pattern并获取这一匹配的子字符串**。该子字符串用于向后引用。要匹配圆括号字符，请使用“\(”或“\)”。 |
+| x｜y      | **匹配x或y**。例如，“z｜food”能匹配“z”或“food”。“(z｜f)ood”则匹配“zood”或“food”。 |
+| [xyz]     | 字符集合（character class）。**匹配所包含的任意一个字符**。例如，“[abc]”可以匹配“plain”中的“a”。其中特殊字符仅有反斜线\保持特殊含义，用于转义字符。其它特殊字符如星号、加号、各种括号等均作为普通字符。脱字符^如果出现在首位则表示负值字符集合；如果出现在字符串中间就仅作为普通字符。**连字符 - 如果出现在字符串中间表示字符范围描述；如果出现在首位则仅作为普通字符。** |
+| [^xyz]    | 排除型（negate）字符集合。**匹配未列出的任意字符。**例如，“[^abc]”可以匹配“plain”中的“plin”。 |
+| [a-z]     | 字符范围。**匹配指定范围内的任意字符。**例如，“[a-z]”可以匹配“a”到“z”范围内的任意小写字母字符。 |
+| [^a-z]    | 排除型的字符范围。**匹配任何不在指定范围内的任意字符**。例如，“[^a-z]”可以匹配任何不在“a”到“z”范围内的任意字符。 |
+
+#### 优先级
+
+优先级为从上到下从左到右，依次降低：
+
+| 运算符                    | 说明         |
+| ------------------------- | ------------ |
+| \                         | 转义符       |
+| (), (?:), (?=), []        | 括号和中括号 |
+| *、+、?、{n}、{n,}、{n,m} | 限定符       |
+| ^、$、\任何元字符         | 定位点和序列 |
+| ｜                        | 选择         |
+
+![](https://doc.shiyanlou.com/linux_base/RegularExpression.png/wm)
+
