--- a/学习计划.md
+++ b/学习计划.md
@@ -87,4 +87,16 @@ linux 鸟叔的linux私房菜
 
 刷面经 和 刷题   
 
-d
+---
+
+2019.5.29
+
+从徐毓回来，再次找工作每天任务
+
+1. 回顾之前的面试知识  c++  网络 操作系统   数据库  
+2. 刷leetcode和重新回顾剑指office  
+3. 去看一个高星项目  leveldb
+4. 编译，链接过程  cmake  makefile (这个先不急 找到工作后可以在看)
+5. 英语能力 ，对不认识的单词进行记录 ，每天回顾
+6. 分布式 redis  
+
