--- a/学习进度.md
+++ b/学习进度.md
@@ -81,3 +81,16 @@
 9.30去借了 后台开发核心技术与应用实践这把书 看起来还行 
 
 10.00准备一下徐毓的笔试
+
+
+
+## 五月
+
+**29**
+
+5.6号去徐毓干了10天左右被辞，CMAKE等链接过程，linux命令 ，英语水平等一方面原因，其公司想招聘能立刻做工作的人
+
+之后回家了一趟 ，然后在5.26 回学校，准备再次找工作
+
+---
+
