--- a/操作系统/命令行.md
+++ b/操作系统/命令行.md
@@ -1204,3 +1204,30 @@ head -3 显示前3行
 
 ![](https://doc.shiyanlou.com/linux_base/RegularExpression.png/wm)
 
+### apt
+
+| apt 命令         | 取代的命令           | 命令的功能                     |
+| ---------------- | -------------------- | ------------------------------ |
+| apt install      | apt-get install      | 安装软件包                     |
+| apt remove       | apt-get remove       | 移除软件包                     |
+| apt purge        | apt-get purge        | 移除软件包及配置文件           |
+| apt update       | apt-get update       | 刷新存储库索引                 |
+| apt upgrade      | apt-get upgrade      | 升级所有可升级的软件包         |
+| apt autoremove   | apt-get autoremove   | 自动删除不需要的包             |
+| apt full-upgrade | apt-get dist-upgrade | 在升级软件包时自动处理依赖关系 |
+| apt search       | apt-cache search     | 搜索应用程序                   |
+| apt show         | apt-cache show       | 显示装细节                     |
+
+### ubuntu升级Cmake3.9
+
+```
+下载cmakewget https://cmake.org/files/v3.9/cmake-3.9.2.tar.gz
+解压文件tar zxvf  cmake-3.9.2.tar.gz
+cd cmake-3.9.2
+./configure
+make
+sudo make install
+cmake --version
+
+```
+
