--- a/golang/go语言36讲/ch1-ch11/go 核心36讲.md
+++ b/golang/go语言36讲/ch1-ch11/go 核心36讲.md
@@ -501,3 +501,16 @@ The third candidate case is selected, the element is 2.
 The candidate case is closed.
 ```
 
+### 如果在select语句中发现某个通道已关闭，那么应该怎样屏蔽掉它所在的分支？
+
+``` go
+select {
+    case _, ok := <-intChan:
+        if !ok {
+            fmt.Println("The candidate case is closed.")
+            intChan=nil
+            break
+        }
+        fmt.Println("The candidate case is selected.")
+    }
+```
