--- a/操作系统/命令行.md
+++ b/操作系统/命令行.md
@@ -144,9 +144,15 @@ ln -s cc ccTo :符号链接(软链接)；删除源，另一个无法使用；（
 
 上一条命令相当于`ls  proc/*.c &> list`
 
+
+可以看到当执行sh a 1>file 2>file时，file中只有错误的输出，因为这种格式，文件被打开了两次，导致标准输出被后面的错误输出覆盖了。而当执行sh a 1>file 2>&1时，标准输出与错误输出都被重定向到file中。
+
+除此之外，我们还可通过&>file将标准输出和错误重定向到file文件。这样的写法更方便。
+
 清空文件 `:> a.txt`
 
 在文件后添加  `echo aa >> a.txt`
+
 
 ## 3.文本处理
 
