--- a/数据结构和算法/剑指office/旋转数组的最小数字.md
+++ b/数据结构和算法/剑指office/旋转数组的最小数字.md
@@ -42,3 +42,23 @@ public:
     }
 };
 ```
+
+```c++
+class Solution {
+public:
+    int findMin(vector<int>& nums) {
+         int l=0,r=nums.size()-1,ans=l,mid;
+         while(l<r){
+           mid=l+(r-l)/2;
+           if(nums[mid]>nums[r]){
+             l=mid+1;
+           }else if(nums[mid]<nums[r]){
+             r=mid;
+           }else{
+             r--;
+           }
+         }
+         return nums[l];
+     }
+};
+```
